# plan-and-track

./: CMakeLists.txt  addhabitdialog.cpp  addhabitdialog.h  addhabitdialog.ui  addtaskdialog.cpp  addtaskdialog.h  addtaskdialog.ui  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  photosurface.rc  resources.qrc  utils.cpp  utils.h
delegates/: datedelegate.cpp  datedelegate.h  habitfrequencydelegate.cpp  habitfrequencydelegate.h  habitstatusdelegate.cpp  habitstatusdelegate.h  plannamedelegate.cpp  plannamedelegate.h  planstatusdelegate.cpp  planstatusdelegate.h  taskstatusdelegate.cpp  taskstatusdelegate.h
models/: habitmodel.cpp  habitmodel.h  planmodel.cpp  planmodel.h  taskmodel.cpp  taskmodel.h
resources/: DarkPurple.qss
